--- a/doc/UserGuide/mpm.tex
+++ b/doc/UserGuide/mpm.tex
@@ -978,24 +978,104 @@ described below.
 \begin{enumerate}
 \item{\bf Compressible Neo-Hookean Model} There are implementations of several
 hyperelastic-plastic model described by Simo and Hughes\cite{simo1998} (pp. 307 -- 321). 
- The model is dubbed "Unified Compressible Neo-Nookean Model" or UCNH for short. 
+ The model is dubbed "Unified Compressible Neo-Nookean Model" or UCNH for short.  Models can 
+still be specified with old input file specifications, (i.e. comp_neo_hook, comp_neo_hook_plastic,
+cnh_damage, cnhp_damage) however these are merely wrappers for the underyling UCNH model.
  Plastic flow and failure can be modelled in addition to elasticity by  specifying 
 several additional options with input flags. This models is very robust, and relatively 
 straightforward because hyperelastic models don't require rotation back and forth 
 between laboratory and material frames of reference.
 
-\tt <UCNH> \normalfont is a basic elastic model.
+NOTE: Support for Implicit CNH and CNH with specified solver is still lacking (for a short time).
 
-\tt <usePlasticity> \normalfont tells Uintah to use the basic elastic model extended
-to include plasticity with isotropic linear hardening.
+The basic input section for UCNH:
 
-\tt <useDamage> \normalfont tells Uintah to use a basic elastic model, with an extension
+\begin{Verbatim}[fontsize=\footnotesize]
+            <constitutive_model type="UCNH"> 
+              <!-- Necessary flags for all CNH models -->
+               <bulk_modulus>   8.9e9  </bulk_modulus>
+               <shear_modulus>  3.52e9 </shear_modulus>
+               <useModifiedEOS> true   </useModifiedEOS>
+                
+              <!-- Plasticity Parameters -->
+               <usePlasticity>     true  </usePlasticity>
+               <yield_stress>      100.0 </yield_stress>
+               <hardening_modulus> 500.0 </hardening_modulus>
+               <alpha>             1.0   </alpha>
+
+              <!-- Damage Parameters -->
+               <useDamage> true </useDamage>
+               <!-- choices are true or false (default) -->
+               <failure_by_stress>  true </failure_by_stress>
+
+               <!-- when failure_by_stress is true, values are stress not strain -->
+               <failure_strain_mean> 900 </failure_strain_mean>
+               <failure_strain_std>  0.1 </failure_strain_std>
+
+               <!-- choices are "constant", "gauss" or "weibull" -->
+               <failure_strain_distrib> "constant" </failure_strain_distrib>
+            </constitutive_model>
+\end{Verbatim}
+
+
+\tt <comp_neo_hook> \normalfont is a basic elastic model, which calls the underlying \tt <UCNH> \normalfont.
+The specifications for CNH are:
+
+\begin{Verbatim}[fontsize=\footnotesize]
+          <constitutive_model type="comp_neo_hook">
+               <bulk_modulus> 8.9e9  </bulk_modulus>
+               <shear_modulus>3.52e9  </shear_modulus>
+               <useModifiedEOS> true  </useModifiedEOS>
+          </constitutive_model>
+\end{Verbatim}
+
+\tt <comp_neo_hook_plastic> \normalfont as the constitutive model type,
+ tells Uintah to use the basic elastic model extended
+to include plasticity with isotropic linear hardening, 
+which is equivalent to \tt <usePlasticity> \normalfont in UCNH.
+The specifications for CNHP are:
+
+\begin{Verbatim}[fontsize=\footnotesize]
+          <constitutive_model type="comp_neo_hook_plastic">
+               <bulk_modulus> 8.9e9     </bulk_modulus>
+               <shear_modulus>3.52e9    </shear_modulus>
+               <useModifiedEOS> true    </useModifiedEOS>
+               <yield_stress>100.0      </yield_stress>
+               <hardening_modulus>500.0 </hardening_modulus>
+               <alpha>     1.0          </alpha>
+          </constitutive_model>
+\end{Verbatim}
+
+
+\tt <cnh_damage> \normalfont as the constiutive model or \tt <useDamage> \normalfont 
+tells Uintah to use a basic elastic model, with an extension
 to failure based on a stress or strain as given below, thus yielding an
 elastic-brittle failure model.  This model also allows a distribution
 of failure strain (or stress) based on normal or Weibull distributions.
 Note that the post-failure behaviour of simulations is not always robust.
 
-When specifying \tt <useDamage> \normalfont, one must also specify
+The specification for CNHD are:
+
+\begin{Verbatim}[fontsize=\footnotesize]
+            <constitutive_model type="cnh_damage"> 
+               <bulk_modulus>   8.9e9  </bulk_modulus>
+               <shear_modulus>  3.52e9 </shear_modulus>
+               <useModifiedEOS> true   </useModifiedEOS>
+                
+               <!-- choices are true or false (default) -->
+               <failure_by_stress>  true </failure_by_stress>
+
+               <!-- when failure_by_stress is true, values are stress not strain -->
+               <failure_strain_mean> 900 </failure_strain_mean>
+               <failure_strain_std>  0.1 </failure_strain_std>
+
+               <!-- choices are "constant", "gauss" or "weibull" -->
+               <failure_strain_distrib> "constant" </failure_strain_distrib>
+            </constitutive_model>
+\end{Verbatim}
+
+
+When specifying \tt <cnh_damage> \normalfont, or using \tt <useDamage> \normalfont one must also specify
 the following MPMFlag
 \begin{Verbatim}[fontsize=\footnotesize]
      <!-- choices are: "AllowNoTension", "ZeroStress" -->
@@ -1003,36 +1083,13 @@ the following MPMFlag
 \end{Verbatim}
 in the \tt <MPM> \normalfont section of the input file.
 
-\tt <useDamage> \normalfont and \tt <usePlasticity> \normalfont has an extension
+\tt <cnhp_damage> \normalfont as the constitutive model (or both damage and plasticity
+ flags discussed above) uses an extension
 to failure based on a stress or strain as given below, thus yielding an
 elastic-plastic model with failure.  Note that the post-failure behaviour of
-simulations is not always robust.
+simulations is not always robust.  The input section for damage and plasticity is
+similar to that for UCNH without \tt <useDamage> \normalfont and \tt <usePlasticity> \normalfont.
 
-\begin{Verbatim}[fontsize=\footnotesize]
-            <constitutive_model type="UCNH"> 
-              <!-- Necessary flags for all CNH models -->
-               <bulk_modulus> 8.9e9  </bulk_modulus>
-               <shear_modulus>3.52e9  </shear_modulus>
-               <useModifiedEOS> true  </useModifiedEOS>
-                
-              <!-- Plasticity Parameters -->
-               <usePlasticity> true </usePlasticity>
-               <yield_stress>100.0</yield_stress>
-               <hardening_modulus>500.0</hardening_modulus>
-
-              <!-- Damage Parameters -->
-               <useDamage> true </useDamage>
-               <!-- choices are true or false (default) -->
-               <failure_by_stress>true </failure_by_stress>
-
-               <!-- when failure_by_stress is true, values are stress not strain -->
-               <failure_strain_mean> 900 </failure_strain_mean>
-               <failure_strain_std> 0.1 </failure_strain_std>
-
-               <!-- choices are "constant", "gauss" or "weibull" -->
-               <failure_strain_distrib> "constant" </failure_strain_distrib>
-            </constitutive_model>
-\end{Verbatim}
 
 \item{\bf Compressible Mooney-Rivlin Model} This model is generally parameterized
 for rubber type materials.  Usage is as follows:
