Doc isn't working?

--- a/doc/UserGuide/mpm.tex
+++ b/doc/UserGuide/mpm.tex
@@ -1018,7 +1018,7 @@ The basic input section for UCNH:
 \end{Verbatim}
 
 
-\tt <comp_neo_hook> \normalfont is a basic elastic model, which calls the underlying \tt <UCNH> \normalfont.
+\tt <comp\_neo\_hook> \normalfont is a basic elastic model, which calls the underlying \tt <UCNH> \normalfont .
 The specifications for CNH are:
 
 \begin{Verbatim}[fontsize=\footnotesize]
@@ -1029,7 +1029,7 @@ The specifications for CNH are:
           </constitutive_model>
 \end{Verbatim}
 
-\tt <comp_neo_hook_plastic> \normalfont as the constitutive model type,
+\tt <comp\_neo\_hook\_plastic> \normalfont as the constitutive model type,
  tells Uintah to use the basic elastic model extended
 to include plasticity with isotropic linear hardening, 
 which is equivalent to \tt <usePlasticity> \normalfont in UCNH.
