--- a/doc/UserGuide/ucf.tex
+++ b/doc/UserGuide/ucf.tex
@@ -298,9 +298,11 @@ right circular cone/frustum.
 two ways to assign axis lengths depending on the orientation of the ellipsoid.
 If the axes are aligned with the Cartesian grid, they may be specified as 
 floating point values with tagnames: rx, ry, rz.  For all other orientation, 
-three vector quantities must be specified in the \tt [a,b,c] \normalfont format. 
-These vectors must be orthogonal to within 1e-12 after dot product or the 
-simulation will throw an exception.
+three vector quantities must be specified in the \tt [a,b,c] \normalfont format.
+Vector quantity tag names are: v1, v2, v3.These vectors must be orthogonal 
+to within 1e-12 after dot product or the simulation will throw an exception.  
+Note, if both vector quantities and floating point tags are used, 
+the vector quantity inputs will take precedence.  
 
 \tt parallelepiped \normalfont requires that four points be specified as
 illustrated by the ASCII art snippet taken from the source code:
