Appendix with bomb units

--- a/doc/UserGuide/glossary.tex
+++ b/doc/UserGuide/glossary.tex
@@ -100,3 +100,40 @@
   \end{itemize}
 
 \end{itemize}
+
+
+% Appendicies
+\newpage
+% \section*{Appendicies}
+% \subsection*{Appendix A. Bomb Units} \label{appendixBombUnits}
+\appendix
+\addappheadtotoc
+
+\chapter{Bomb Units} \label{appendixBombUnits}
+
+Following is a table of conversion factors from bomb units to mks units.  Bomb units are useful in small scale
+simulations that occur very quickly, such as detonation and deformation. \\
+
+\begin{tabular}{|c|c|}
+\hline 
+\bf{Measure} & \bf{Conversion Factor}     \\
+\hline
+mass	& $\mu g$               \\
+length  & cm                    \\
+time    & $\mu s$               \\ [1ex]
+kinematic viscosity & $1\frac{\displaystyle cm^2}{\displaystyle \mu s} = 10^2 \frac{\displaystyle m^2}{\displaystyle s}$                          \\ [1ex]
+velocity            & $1\frac{\displaystyle cm}{\displaystyle \mu s} = 10^4 \frac{\displaystyle m}{\displaystyle s}$                              \\ [2ex]
+force               & $1\frac{\displaystyle \mu gcm}{\displaystyle \mu s^2} = 10 N$                                                               \\ [2ex]
+pressure            & $\frac{\displaystyle 10 N}{\displaystyle cm^2} = 10^5 Pa$                                                                   \\ [1ex]
+viscosity           & $10^5 Pa \mu s = 10^{-1} Pa s$                                                                                              \\ [1ex]
+density             & $1\frac{\displaystyle \mu g}{\displaystyle cm^3} = 1\frac{\displaystyle g}{\displaystyle m^3}$                              \\ [1ex]
+heat capacity       & $\frac{\displaystyle 10N cm}{\displaystyle \mu g K} = 10^8 \frac{\displaystyle J}{\displaystyle kg K}$                      \\ [2ex]
+power               & $\frac{\displaystyle 10N cm}{\displaystyle \mu s} = 10^5 W$                                                                 \\ [1ex]
+thermal conductivity& $\frac{\displaystyle 10^5 W}{\displaystyle cm K} = 10^7 \frac{\displaystyle W}{\displaystyle m K}$                          \\ [2ex]
+surface energy      & $\frac{\displaystyle 10 N cm}{\displaystyle cm^2} = 10^3 \frac{\displaystyle J}{\displaystyle m^2}$                         \\ [2ex]
+fracture toughness  & $\frac{\displaystyle 10 N}{\displaystyle cm^{\frac{3}{2}}} = 10^{-2} \frac{\displaystyle N}{\displaystyle m^{\frac{3}{2}}}$ \\ [2ex]
+enthalpy            & $1\frac{\displaystyle J}{\displaystyle kg} = 10^{-8} \frac{\displaystyle cm^2}{\displaystyle \mu s^2}$                      \\ [2ex]
+\hline
+\end{tabular}
+
+
