--- a/doc/UserGuide/user_guide.tex
+++ b/doc/UserGuide/user_guide.tex
@@ -13,7 +13,7 @@
 \usepackage{esint}
 \usepackage{amssymb}
 \usepackage[usenames]{color}
-
+\usepackage[toc,page,title,titletoc]{appendix}
 
 \pdfcompresslevel=9
 \DeclareGraphicsExtensions{{.png},{.pdf},{.jpg},{jpeg}}
