updated gfortran download link

--- a/doc/InstallationGuide/installation_guide.tex
+++ b/doc/InstallationGuide/installation_guide.tex
@@ -1194,7 +1194,7 @@ make -j#
 		At the time of writing of this documentation, there is no binary version of the latest Fink distribution for Mac OSX. One must compile from the source by following the instructions on the website \url{http://www.finkproject.org/download/srcdist.php}. Make sure you select 64 bit mode when prompted. Keep all other options to default.
 	
 	\subsection{gfortran}
-		Install the binary package for gfortran from: \url{http://hpc.sourceforge.net/}. Then, set the path properly. If you are using bash, this is done as:
+		Install the binary package for gfortran from: \url{http://r.research.att.com/tools/}. Then, set the path properly. If you are using bash, this is done as:
 		\begin{verbatim}
 			export PATH=/usr/local/bin:$PATH
 		\end{verbatim}
