--- a/doc/UserGuide/user_guide.tex
+++ b/doc/UserGuide/user_guide.tex
@@ -97,7 +97,7 @@
 \title{Uintah User Guide}
 
 
-\author{ Jim Guilkey, Todd Harman, Justin Luitjens, \\ John Schmidt, Jeremy Thornock, J. Davison de St. Germain, \\ Siddharth Shankar, Joseph Peterson, Carson Brownlee}
+\author{ Jim Guilkey, Todd Harman, Justin Luitjens, \\ John Schmidt, Jeremy Thornock, J. Davison de St. Germain, \\ Siddharth Shankar, Joseph Peterson, Carson Brownlee, Charles Reid}
 
 \date{Version 1.2}
 
