Add AMR section from old CSAFE wiki.

--- a/doc/UserGuide/ucf.tex
+++ b/doc/UserGuide/ucf.tex
@@ -626,6 +626,9 @@ for what are frequently referred to as ``ghost-cells".
 %- How is a cell flagged as needing to be refined
 %
 %__________________________________
+
+\input{amr}
+
 \section{Regridder}
 
 The regridder creates a multilevel grid from the refinement flags.
